# rigit

./: Cargo.toml  README.md
.github/workflows/: compile.yml  ntfy.yml  test.yml
src/: cli.rs  fetch.rs  lib.rs  main.rs  pull.rs  repos.rs  status.rs
tests/: status_tests.rs
