[package]
name = "rigit"
authors = ["Weiberle17"]
version = "0.1.3"
description = "Cli-tool which lets you perform a git action on multiple repositories."
edition = "2021"
repository = "https://github.com/Weiberle17/rigit"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
clap = { version = "4.3.8", features = ["derive"] }
colored = "2.0.0"
